# cdlpto

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/cdlpto/: cli.py  config.py  email.py  pdf.py
